<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AboutActivity">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:layout_marginBottom="60dp"
      android:fillViewport="true"
      >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="History / Introduction"
          android:layout_marginTop="30dp"
          android:textSize="@dimen/title_size2"
          android:layout_gravity="center_horizontal"
          android:textColor="@color/textColor"
          android:fontFamily="@string/bold"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
          android:layout_marginTop="20dp"
          android:fontFamily="@string/regular"
          android:text="ABOUT THE COLLEGE"
          android:textColor="@color/textColor"
          android:textSize="@dimen/text_size1" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/about_clg"
          android:layout_marginTop="@dimen/text_margin"
          android:layout_marginHorizontal="@dimen/text_margin"
          android:textSize="@dimen/text_size0"
          android:layout_gravity="center_horizontal"
          android:textColor="@color/textColor"
          android:fontFamily="@string/light"/>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_gravity="left"
          android:layout_marginTop="20dp"
          android:fontFamily="@string/regular"
          android:text="Our Eduacational Family"
          android:textColor="@color/textColor"
          android:textSize="@dimen/text_size1" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/OEF"
          android:layout_marginTop="@dimen/text_margin"
          android:layout_marginHorizontal="@dimen/text_margin"
          android:textSize="@dimen/text_size0"
          android:layout_gravity="center_horizontal"
          android:textColor="@color/textColor"
          android:fontFamily="@string/light"/>

    </LinearLayout>

  </ScrollView>

</FrameLayout>