<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ui.ContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/text_margin">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Contact Details:"
            android:layout_marginTop="36dp"
            android:textSize="@dimen/title_size"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/textColor"
            android:fontFamily="@string/bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Karmaveer Bhaurao Patil Degree College"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Address :"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Adarsh Vikas Mandal’s Karmaveer Bhaurao Patil College, Road No, 16V, Near Nehru Nagar, Behind Wagale Fire Brigade, Wagale Estate, Thane 400 604."
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:gravity="center_horizontal"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone Numbers :"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/regular"/>

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="85914 98099"
            android:layout_marginTop="5dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email :"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/regular"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=" kbp.degreecollege@yahoo.com"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/light"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Google Map :"
            android:layout_marginTop="@dimen/text_margin"
            android:layout_marginHorizontal="@dimen/text_margin"
            android:textSize="@dimen/text_size"
            android:textColor="@color/textColor"
            android:fontFamily="@string/regular"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="230dp"
            android:src="@drawable/kbpmap"
            android:id="@+id/map"/>


    </LinearLayout>


</FrameLayout>