<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context=".ui.home.HomeFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:orientation="vertical">

            <ViewFlipper
                android:id="@+id/flipper"
                android:layout_width="match_parent"
                android:layout_height="290dp"
                android:layout_gravity="center"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="#E10909"
                android:fontFamily="@string/bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_msg"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginHorizontal="@dimen/text_margin"
                android:textSize="@dimen/text_size"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="35dp"
                android:textColor="@color/textColor"
                android:fontFamily="@string/light"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="36dp"
                android:layout_marginBottom="10dp"
                android:background="@color/darkcolor">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="36dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Announcement"
                        android:id="@+id/all_course"
                        android:layout_marginTop="@dimen/text_margin"
                        android:textSize="@dimen/title_size"
                        android:layout_gravity="center_horizontal"
                        android:textColor="#DF1111"
                        android:fontFamily="@string/bold"/>

                    <com.google.android.material.card.MaterialCardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="#fff"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="SEM 3 Regular ATKT Exam Timetable"
                                android:id="@+id/atkt"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="SEM 1 Regular ATKT Exam Timetable"
                                android:id="@+id/atkt1"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:fontFamily="@string/light"/>

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""

                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:fontFamily="@string/light"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:id="@+id/baf"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:fontFamily="@string/light"/>
                            <View
                                android:layout_width="match_parent"
                                android:layout_height="1dp"
                                android:background="@color/grey"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text=""
                                android:id="@+id/bbi"
                                android:layout_marginTop="@dimen/text_margin"
                                android:layout_marginHorizontal="@dimen/text_margin"
                                android:textSize="@dimen/text_size"
                                android:layout_gravity="center_horizontal"
                                android:textColor="@color/textColor"
                                android:layout_margin="8dp"
                                android:fontFamily="@string/light"/>






                        </LinearLayout>

                    </com.google.android.material.card.MaterialCardView>

                </LinearLayout>

            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/vision"/>


            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:src="@drawable/mission"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Activities"
                android:layout_marginTop="36dp"
                android:textSize="@dimen/title_size"
                android:layout_gravity="center_horizontal"
                android:textColor="#E10909"
                android:fontFamily="@string/bold"/>

            <ViewFlipper
                android:id="@+id/flipper1"
                android:layout_width="match_parent"
                android:layout_marginTop="@dimen/text_margin"
                android:layout_marginBottom="15dp"
                android:layout_height="180dp"
                android:layout_gravity="center" />

        </LinearLayout>




    </ScrollView>

</FrameLayout>